testdata/baselines/reference/submodule/conformance/privateNameClassExpressionLoop.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
privateNameClassExpressionLoop.ts(3,11): error TS2339: Property 'push' does not exist on type '{}'.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== privateNameClassExpressionLoop.ts (1 errors) ====
    const array = [];
    for (let i = 0; i < 10; ++i) {
        array.push(class C {
              ~~~~
!!! error TS2339: Property 'push' does not exist on type '{}'.
            #myField = "hello";
            #method() {}
            get #accessor() { return 42; }
            set #accessor(val) { }
        });
    }
    